--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/date-fns": "^2.6.0",
     "@types/faker": "^5.1.2",
     "@types/morgan": "^1.7.37",
+    "@types/multer": "^1.4.5",
     "@types/prettier": "^1.19.0",
     "@types/sha256": "^0.2.0",
     "@types/swagger-parser": "^7.0.1",
@@ -63,6 +64,7 @@
     "italia-tslint-rules": "^1.1.3",
     "italia-utils": "^4.1.1",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
