--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "io-dev-api-server",
-  "version": "1.0.0",
+  "pretty_name": "IO App - dev server",
   "description": "A mock server to help io-app development https://io.italia.it/",
+  "version": "1.0.0",
   "main": "app.js",
   "api_beckend_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v7.0.0/api_backend.yaml",
   "api_public_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v7.0.0/api_public.yaml",
@@ -46,6 +47,7 @@
     "@types/body-parser": "^1.17.1",
     "@types/date-fns": "^2.6.0",
     "@types/faker": "^5.1.2",
+    "@types/figlet": "^1.2.1",
     "@types/morgan": "^1.9.2",
     "@types/prettier": "^1.19.0",
     "@types/sha256": "^0.2.0",
@@ -57,6 +59,7 @@
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "faker": "^5.1.0",
+    "figlet": "^1.5.0",
     "italia-ts-commons": "^5.1.13",
     "italia-tslint-rules": "^1.1.3",
     "italia-utils": "4.1.1",
