--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test-watch": "jest --watch",
     "lint": "tslint -p . -t verbose",
     "lint-autofix": "tslint -p . -t verbose --fix",
+    "configure": "sh ./configure.sh",
     "start": "ts-node src/start.ts",
     "prettify": "prettier --write \"src/**/*.ts*\"",
     "generate:models": "rimraf generated && rimraf generated/definitions/backend && mkdir -p generated/definitions/backend && gen-api-models --api-spec $npm_package_api_backend_specs --out-dir ./generated/definitions/backend && gen-api-models --api-spec $npm_package_api_public_specs --out-dir generated/definitions/backend",
