--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "test-watch": "jest --watch",
     "lint": "tslint -p . -t verbose",
     "lint-autofix": "tslint -p . -t verbose --fix",
-    "configure": "sh ./configure.sh",
     "start": "ts-node src/start.ts",
     "prettify": "prettier --write \"src/**/*.ts*\"",
     "generate:models": "rimraf generated && rimraf generated/definitions/backend && mkdir -p generated/definitions/backend && gen-api-models --api-spec $npm_package_api_backend_specs --out-dir ./generated/definitions/backend && gen-api-models --api-spec $npm_package_api_public_specs --out-dir generated/definitions/backend",
@@ -62,14 +61,6 @@
   },
   "dependencies": {
     "@pagopa/ts-commons": "^9.4.0",
-    "@types/body-parser": "^1.19.1",
-    "@types/faker": "^5.5.7",
-    "@types/date-fns": "^2.6.0",
-    "@types/figlet": "^1.5.4",
-    "@types/morgan": "^1.9.3",
-    "@types/prettier": "^1.19.0",
-    "@types/sha256": "^0.2.0",
-    "@types/swagger-parser": "^7.0.1",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "cli-ux": "^5.6.3",
@@ -79,26 +70,36 @@
     "faker": "^5.5.3",
     "figlet": "^1.5.0",
     "italia-ts-commons": "^5.1.13",
-    "italia-tslint-rules": "^1.1.3",
     "italia-utils": "4.1.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.12",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
-    "rimraf": "^3.0.2",
     "sha256": "^0.2.0",
     "swagger-parser": "^8.0.4",
     "ts-node": "8.10.2"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.1",
+    "@types/faker": "^5.5.7",
+    "@types/date-fns": "^2.6.0",
+    "@types/figlet": "^1.5.4",
+    "@types/morgan": "^1.9.3",
+    "@types/prettier": "^1.19.0",
+    "@types/sha256": "^0.2.0",
+    "@types/swagger-parser": "^7.0.1",
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.25",
     "@types/node": "^12.12.18",
     "@types/supertest": "^2.0.8",
+    "italia-tslint-rules": "^1.1.3",
     "jest": "^24.9.0",
+    "nodemon": "^2.0.12",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.19.1",
+    "rimraf": "^3.0.2",
     "supertest": "^4.0.2",
     "ts-jest": "^24.2.0",
+    "ts-loader": "^9.2.4",
     "tslint": "^5.20.1",
+    "ts-node": "8.10.2",
     "typescript": "^4.1.0"
   }
 }
