--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "dependencies": {
     "@pagopa/ts-commons": "^9.4.0",
+    "@types/lodash": "^4.14.175",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "cli-ux": "^5.6.3",
@@ -71,6 +72,7 @@
     "figlet": "^1.5.0",
     "italia-ts-commons": "^5.1.13",
     "italia-utils": "4.1.1",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
