--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "rimraf": "^3.0.2",
     "sha256": "^0.2.0",
     "swagger-parser": "^8.0.4",
-    "ts-node": "8.10.2"
+    "ts-node": "8.10.2",
+    "ts-pattern": "^3.3.3"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.1",
