--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "figlet": "^1.5.0",
-    "italia-ts-commons": "^5.1.13",
-    "italia-utils": "4.1.1",
+    "italia-ts-commons": "8.6.0",
+    "italia-utils": "^4.1.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "npm-run-all": "^4.1.5",
