--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A mock server to help io-app development https://io.italia.it/",
   "version": "1.0.0",
   "main": "app.js",
-  "api_backend_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v7.20.1-RELEASE/api_backend.yaml",
-  "api_public_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v7.20.1-RELEASE/api_public.yaml",
-  "api_bonus_vacanze": "https://raw.githubusercontent.com/pagopa/io-backend/v7.20.1-RELEASE/api_bonus.yaml",
-  "api_cgn": "https://raw.githubusercontent.com/pagopa/io-backend/v7.20.1-RELEASE/api_cgn.yaml",
+  "api_backend_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v7.21.0-RELEASE/api_backend.yaml",
+  "api_public_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v7.21.0-RELEASE/api_public.yaml",
+  "api_bonus_vacanze": "https://raw.githubusercontent.com/pagopa/io-backend/v7.21.0-RELEASE/api_bonus.yaml",
+  "api_cgn": "https://raw.githubusercontent.com/pagopa/io-backend/v7.21.0-RELEASE/api_cgn.yaml",
   "api_cgn_merchants": "https://raw.githubusercontent.com/pagopa/io-backend/cgn_operator_search_api_integration/api_cgn_operator_search.yaml",
   "api_cgn_geo": "https://raw.githubusercontent.com/pagopa/io-backend/here_geoapi_integration/api_geo.yaml",
   "content_specs": "https://raw.githubusercontent.com/pagopa/io-services-metadata/master/definitions.yml",
@@ -70,8 +70,8 @@
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "figlet": "^1.5.0",
-    "italia-ts-commons": "^5.1.13",
-    "italia-utils": "4.1.1",
+    "italia-ts-commons": "8.6.0",
+    "italia-utils": "^4.1.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "npm-run-all": "^4.1.5",
