--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A mock server to help io-app development https://io.italia.it/",
   "version": "1.0.0",
   "main": "app.js",
-  "api_backend_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v7.23.0-RELEASE/api_backend.yaml",
-  "api_public_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v7.23.0-RELEASE/api_public.yaml",
+  "api_backend_specs": "https://raw.githubusercontent.com/pagopa/io-backend/special-service-specs/api_backend.yaml",
+  "api_public_specs": "https://raw.githubusercontent.com/pagopa/io-backend/special-service-specs/api_public.yaml",
   "api_bonus_vacanze": "https://raw.githubusercontent.com/pagopa/io-backend/v7.23.0-RELEASE/api_bonus.yaml",
   "api_cgn": "https://raw.githubusercontent.com/pagopa/io-backend/v7.23.0-RELEASE/api_cgn.yaml",
   "api_cgn_merchants": "https://raw.githubusercontent.com/pagopa/io-backend/cgn_operator_search_api_integration/api_cgn_operator_search.yaml",
