--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "app.js",
   "api_backend_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v7.26.0-RELEASE/api_backend.yaml",
   "api_public_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v7.26.0-RELEASE/api_public.yaml",
-  "api_bonus_vacanze": "https://raw.githubusercontent.com/pagopa/io-backend/v7.23.0-RELEASE/api_bonus.yaml",
-  "api_cgn": "https://raw.githubusercontent.com/pagopa/io-backend/v7.23.0-RELEASE/api_cgn.yaml",
+  "api_bonus_vacanze": "https://raw.githubusercontent.com/pagopa/io-backend/v7.26.0-RELEASE/api_bonus.yaml",
+  "api_cgn": "https://raw.githubusercontent.com/pagopa/io-backend/v7.26.0-RELEASE/api_cgn.yaml",
   "api_cgn_merchants": "https://raw.githubusercontent.com/pagopa/io-backend/cgn_operator_search_api_integration/api_cgn_operator_search.yaml",
   "api_cgn_geo": "https://raw.githubusercontent.com/pagopa/io-backend/here_geoapi_integration/api_geo.yaml",
   "content_specs": "https://raw.githubusercontent.com/pagopa/io-services-metadata/master/definitions.yml",
@@ -21,7 +21,7 @@
   "api_bpd_award": "https://raw.githubusercontent.com/pagopa/io-services-metadata/master/bonus/specs/bpd/award.json",
   "api_bpd_winning_transactions": "https://raw.githubusercontent.com/pagopa/io-services-metadata/master/bonus/specs/bpd/winning_transactions.json",
   "api_bpd_winning_transactions_v2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/master/bonus/specs/bpd/winning_transactions_v2.json",
-  "api_eu_covid_cert": "https://raw.githubusercontent.com/pagopa/io-backend/67bfd680f2485f735521467813cdd212bf2617fe/openapi/api_eucovidcert.yaml",
+  "api_eu_covid_cert": "https://raw.githubusercontent.com/pagopa/io-backend/v7.26.0/api_eucovidcert.yaml",
   "api_sicilia_vola": "assets/SiciliaVola.yml",
   "author": "Matteo Boschi",
   "license": "MIT",
