--- a/package.json
+++ b/package.json
@@ -76,7 +76,6 @@
     "rimraf": "^3.0.2",
     "sha256": "^0.2.0",
     "swagger-parser": "^8.0.4",
-    "ts-node": "8.10.2",
     "ts-pattern": "^3.3.3"
   },
   "resolutions": {
@@ -104,7 +103,7 @@
     "supertest": "^4.0.2",
     "ts-jest": "^24.2.0",
     "ts-loader": "^9.2.4",
-    "ts-node": "8.10.2",
+    "ts-node": "^10.4.0",
     "tslint": "^5.20.1",
     "typescript": "^4.5.4"
   }
